// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`overlay: adapter colors paint the plot 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "markColors": [
    "#f00",
    "#f60",
    "#fa0",
  ],
  "numRows": 1,
  "rowArrangementIsCustom": false,
  "rowColorKey": [
    {
      "color": "#f00",
      "label": "Grain1",
      "value": "Grain1",
    },
    {
      "color": "#f60",
      "label": "Grain2",
      "value": "Grain2",
    },
    {
      "color": "#fa0",
      "label": "Grain3",
      "value": "Grain3",
    },
  ],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": undefined,
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": "#f60",
      "group": undefined,
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#f60",
    },
    {
      "color": "#fa0",
      "group": undefined,
      "label": undefined,
      "name": "Grain3",
      "rowColor": "#fa0",
    },
  ],
}
`;

exports[`overlay: rowColor's spare range leads the palette 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "markColors": [
    "#f00",
    "#111111",
    "#222222",
    "#4e79a7",
  ],
  "numRows": 1,
  "rowArrangementIsCustom": false,
  "rowColorKey": [
    {
      "color": "#f00",
      "label": "Grain1",
      "value": "Grain1",
    },
    {
      "color": "#111111",
      "label": "Grain2",
      "value": "Grain2",
    },
    {
      "color": "#222222",
      "label": "Grain3",
      "value": "Grain3",
    },
    {
      "color": "#4e79a7",
      "label": "Grain4",
      "value": "Grain4",
    },
  ],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#111111",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": "#222222",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": "#4e79a7",
    },
  ],
}
`;

exports[`overlay: tableau10 by name, grouped or not 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "markColors": [
    "#f00",
    "#4e79a7",
    "#f28e2c",
    "#e15759",
  ],
  "numRows": 1,
  "rowArrangementIsCustom": false,
  "rowColorKey": [
    {
      "color": "#f00",
      "label": "Grain1",
      "value": "Grain1",
    },
    {
      "color": "#4e79a7",
      "label": "Grain2",
      "value": "Grain2",
    },
    {
      "color": "#f28e2c",
      "label": "Grain3",
      "value": "Grain3",
    },
    {
      "color": "#e15759",
      "label": "Grain4",
      "value": "Grain4",
    },
  ],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#4e79a7",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": "#f28e2c",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": "#e15759",
    },
  ],
}
`;

exports[`rows, density: a dialog edit tints the label 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#f00",
    undefined,
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": true,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#00f",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows, density: identity moves to the label tint 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#f00",
    undefined,
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": false,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows, line: dialog edits reorder, recolor the plot and relabel 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    undefined,
    "#00f",
    undefined,
    "#f00",
  ],
  "numRows": 4,
  "rowArrangementIsCustom": true,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": "Liver 3",
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#00f",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
  ],
}
`;

exports[`rows, line: dialog edits reorder, recolor the plot and relabel 2`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#f00",
    undefined,
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": false,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows, line: the adapter color, else the plot color 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#f00",
    undefined,
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": false,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows: a focus hides rows without recoloring the kept ones 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#4e79a7",
    undefined,
  ],
  "numRows": 2,
  "rowArrangementIsCustom": false,
  "rowColorKey": [
    {
      "color": "#4e79a7",
      "label": "Islet",
      "value": "Islet",
    },
    {
      "color": "#f28e2c",
      "label": "Liver",
      "value": "Liver",
    },
  ],
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": "#4e79a7",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    undefined,
    "#f00",
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": true,
  "rowColorKey": [],
  "rowTree": "((Grain2,Grain1),(Grain3,Grain4));",
  "sources": [
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 2`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    "#f00",
    undefined,
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": true,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 3`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    undefined,
    "#f00",
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": false,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;

exports[`rows: the declared order leads and the rest keep adapter order 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": undefined,
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "markColors": [
    undefined,
    "#f00",
    undefined,
    undefined,
  ],
  "numRows": 4,
  "rowArrangementIsCustom": false,
  "rowColorKey": [],
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "name": "Grain3",
      "rowColor": undefined,
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "name": "Grain1",
      "rowColor": "#f00",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "name": "Grain2",
      "rowColor": undefined,
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "name": "Grain4",
      "rowColor": undefined,
    },
  ],
}
`;
